{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 3,
  "lineage": "557c4811-81e2-4ca1-60dd-70e2370892ea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rdp_restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:696505809372:security-group-rule/sgr-06b46e36cf12e7641",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "RDP from allowed CIDR - Security Autopilot",
            "from_port": 3389,
            "id": "sgr-06b46e36cf12e7641",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ef32ca8805a55a8b",
            "security_group_rule_id": "sgr-06b46e36cf12e7641",
            "tags": null,
            "tags_all": {},
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "null_resource.revoke_public_admin_ingress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:696505809372:security-group-rule/sgr-081782ca552f1ecf5",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "SSH from allowed CIDR - Security Autopilot",
            "from_port": 22,
            "id": "sgr-081782ca552f1ecf5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ef32ca8805a55a8b",
            "security_group_rule_id": "sgr-081782ca552f1ecf5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "null_resource.revoke_public_admin_ingress"
          ]
        }
      ]
    }
  ]
}